--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -20,11 +20,11 @@ jobs:
         distribution: 'temurin'
 
     - name: Build account
-      run: mvn -B package --file account/pom.xml
+      run: mvn -B package --file backend/account/pom.xml
     - name: Build security
-      run: mvn -B package --file security/pom.xml
+      run: mvn -B package --file backend/security/pom.xml
 
     - name: Test account
-      run: mvn -B test --file account/pom.xml
+      run: mvn -B test --file backend/account/pom.xml
     - name: Test security
-      run: mvn -B test --file security/pom.xml
+      run: mvn -B test --file backend/security/pom.xml
