--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -1,14 +1,28 @@
 spring.application.name=vulcanus
 server.port=8080
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev_postgres_db
+spring.datasource.username=ser
 spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+# JPA properties for PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://dev_mongo_user:dev_mongo_pass@localhost:27017/dev_mongo_db
+# Clean up MongoDB collections on startup
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.database=dev_mongo_db
+
 #logging
 logging.level.org.springframework.security=TRACE
