--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -12,15 +12,21 @@ server.port=8080
 #spring.jpa.show-sql=true
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/dev_postgres_db
-spring.datasource.username=ser
+spring.datasource.username=user
 spring.datasource.password=password
 # JPA properties for PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+# Clean up Postgres on startup, if you want to persist data across application restarts, change the following property to 'update'
 spring.jpa.hibernate.ddl-auto=create-drop
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://dev_mongo_user:dev_mongo_pass@localhost:27017/dev_mongo_db
-# Clean up MongoDB collections on startup
+spring.data.mongodb.uri=mongodb://user:password@localhost:27017/dev_mongo_db
+# Enable detailed logging for MongoDB operations
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.convert.MappingMongoConverter=DEBUG
+logging.level.org.springframework.data.mongodb.core.MongoOperations=DEBUG
+logging.level.org.mongodb.driver=DEBUG
+# Clean up MongoDB collections on startup, if you want to persist data across application restarts, change the following property to 'false'
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.database=dev_mongo_db
 
