--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -13,16 +13,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
-    - name: Build vulcanus
-      run: mvn -B package --file vulcanus/pom.xml
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
 
-    - name: Test vulcanus
-      run: mvn -B test --file vulcanus/pom.xml
+      - name: Cache Docker Compose
+        id: docker-compose-cache
+        uses: actions/cache@v3
+        with:
+          path: /usr/local/bin/docker-compose
+          key: docker-compose-v2.20.2-$(runner.os)-$(runner.arch)
+          restore-keys: |
+            docker-compose-
+
+      - name: Install Docker Compose if not cached
+        if: steps.docker-compose-cache.outputs.cache-hit != 'true'
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Verify Docker Compose Installation
+        run: docker-compose --version
+
+      - name: Build and start services
+        run: docker-compose -f vulcanus/docker/docker-compose.yml up -d
+
+      - name: Wait for services to be ready
+        run: sleep 30 # Adjust this timing as necessary based on service initialization.
+
+      - name: Build vulcanus
+        run: mvn -B package --file vulcanus/pom.xml
+
+      - name: Test vulcanus
+        run: mvn -B test --file vulcanus/pom.xml
+
+      - name: Shut down services
+        run: docker-compose -f vulcanus/docker/docker-compose.yml down
