MER-113 Zmiana portów dla apki odpalanej w dockerze

--- a/vulcanus/src/main/resources/application-dev.properties
+++ b/vulcanus/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
 # Development Environment Specific Properties
+server.port=8080
+
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/dev_postgres_db
 # MongoDB Configuration
