--- a/vulcanus/src/main/resources/application-docker.properties
+++ b/vulcanus/src/main/resources/application-docker.properties
@@ -1,4 +1,6 @@
 # Docker Environment Specific Properties
+server.port=8081
+
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://postgres-db:5432/dev_postgres_db
 # MongoDB Configuration
