MER-113 Stworzenie podstaw pod observability oraz zmiany w konfiguracji dockera (#31)
* MER-113 Stworzenie podstaw pod observability (micrometer+prometheus+grafana), edycja konfiguracji dockera

* MER-113 Poprawka CI/CD

* MER-113 Poprawka CI/CD

* MER-113 Poprawka CI/CD

* MER-113 Poprawka CI/CD

* MER-113 Poprawka CI/CD

* MER-113 Usunięcie zbędnych plików

* MER-113 Zmiana portów dla apki odpalanej w dockerze

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -1,34 +1,25 @@
+# Common Properties
+spring.profiles.default=dev
 spring.application.name=vulcanus
-server.port=8080
-# H2 Database Configuration
-#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev_postgres_db
 spring.datasource.username=user
 spring.datasource.password=password
-# JPA properties for PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-# Clean up Postgres on startup, if you want to persist data across application restarts, change the following property to 'update'
 spring.jpa.hibernate.ddl-auto=create-drop
+
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://user:password@localhost:27017/dev_mongo_db
+spring.data.mongodb.database=dev_mongo_db
+
 # Enable detailed logging for MongoDB operations
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb.core.convert.MappingMongoConverter=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoOperations=DEBUG
 logging.level.org.mongodb.driver=DEBUG
-# Clean up MongoDB collections on startup, if you want to persist data across application restarts, change the following property to 'false'
-spring.data.mongodb.auto-index-creation=true
-spring.data.mongodb.database=dev_mongo_db
-
-#logging
-logging.level.org.springframework.security=TRACE
+# Spring Actuator and Micrometer Configuration
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
+management.metrics.tags.application=vulcanus
+management.endpoint.prometheus.enabled=true
