--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -33,13 +33,25 @@ spring.data.mongodb.database=dev_mongo_db
 #logging
 logging.level.org.springframework.security=TRACE
 #github
+#spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+#spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+##spring.security.oauth2.client.registration.github.scope=read:user,user:email
+#spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+##spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/account/login/oauth2/code/github
+##spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+#spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+#spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+#spring.security.oauth2.client.provider.github.user-name-attribute=id
+#new
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
-#spring.security.oauth2.client.registration.github.scope=read:user,user:email
+# Optionally enable the scope if needed
+#spring.security.oauth2.client.registration.github.scope=read:user
+spring.security.oauth2.client.registration.github.scope=none,user:email
+#spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/account/login/oauth2/code/github
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
-spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/account/login/oauth2/code/github
-#spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-name-attribute=id
+
 #google
