oauth2 implement get user email

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 # Optionally enable the scope if needed
 #spring.security.oauth2.client.registration.github.scope=read:user
-spring.security.oauth2.client.registration.github.scope=none,user:email
+spring.security.oauth2.client.registration.github.scope=user:email
 #spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/account/login/oauth2/code/github
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
