add configuration class for urls

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -32,6 +32,9 @@ spring.data.mongodb.database=dev_mongo_db
 
 #logging
 logging.level.org.springframework.security=TRACE
+#urls
+url.github-email-endpoint=https://api.github.com/user/emails
+url.after-login-page-url=http://localhost:5173/main-view
 #github
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
