--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -23,3 +23,5 @@ management.endpoint.health.show-details=always
 management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=vulcanus
 management.endpoint.prometheus.enabled=true
+
+reset.password.link=http://localhost:5173/login/new-password?token=
