--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -33,6 +33,7 @@ url.oauth2-login-page-url=http://localhost:5173/login
 url.oauth2-default-success-url=http://localhost:8080/account/login-success
 url.oauth2-failure-url=http://localhost:5173/error?error=oauth2-login-failure
 url.logout-url=http://localhost:5173/
+url.reset-password-url=http://localhost:5173/login/new-password?token=
 #github
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
@@ -50,7 +51,3 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-
-
-
-reset.password.link=http://localhost:5173/login/new-password?token=
