fix bugs in backend (routing and email sending)

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -28,7 +28,7 @@ management.endpoint.prometheus.enabled=true
 logging.level.org.springframework.security=TRACE
 #urls
 url.github-email-endpoint=https://api.github.com/user/emails
-url.after-login-page-url=http://localhost:5173/main-view
+url.after-login-page-url=http://localhost:5173/
 url.oauth2-login-page-url=http://localhost:5173/login
 url.oauth2-default-success-url=http://localhost:8080/account/login-success
 url.oauth2-failure-url=http://localhost:5173/error?error=oauth2-login-failure
