--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -28,12 +28,12 @@ management.endpoint.prometheus.enabled=true
 logging.level.org.springframework.security=TRACE
 #urls
 url.github-email-endpoint=https://api.github.com/user/emails
-url.after-login-page-url=http://localhost:5173/main-view
+url.after-login-page-url=http://localhost:5173/
 url.oauth2-login-page-url=http://localhost:5173/login
 url.oauth2-default-success-url=http://localhost:8080/account/login-success
 url.oauth2-failure-url=http://localhost:5173/error?error=oauth2-login-failure
 url.logout-url=http://localhost:5173/
-url.reset-password-url=http://localhost:5173/login/new-password?token=
+url.reset-password-url=http://localhost:5173/new-password?token=
 #github
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
