--- a/venus/package.json
+++ b/venus/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "leaflet": "^1.9.4",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
