prace nad poprawą security

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -35,16 +35,16 @@ url.oauth2-failure-url=http://localhost:5173/error?error=oauth2-login-failure
 url.logout-url=http://localhost:5173/
 url.reset-password-url=http://localhost:5173/new-password?token=
 #github
-spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
-spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.client-id=Ov23liysAoIYjj8KAM4e
+spring.security.oauth2.client.registration.github.client-secret=9a3b7e56bf4c3efcb642f30f20e7ba90b8716ba7
 spring.security.oauth2.client.registration.github.scope=user:email
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-name-attribute=id
 #google
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=1008156072423-9991of13tcv3bg0anqenslokcpgqnnkk.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid, profile, email
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
