--- a/vulcanus/pom.xml
+++ b/vulcanus/pom.xml
@@ -138,6 +138,11 @@
             <artifactId>shedlock-provider-mongo</artifactId>
             <version>5.16.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>2.0.10</version>
+        </dependency>
     </dependencies>
 
     <build>
