--- a/demeter/package.json
+++ b/demeter/package.json
@@ -9,13 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.39",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~52.0.14",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
