Więcej userów generowanych w PopulateDbs, json z userami do locusta, relogowanie

--- a/vulcanus/docker/merkury/locust/Dockerfile
+++ b/vulcanus/docker/merkury/locust/Dockerfile
@@ -1,4 +1,5 @@
 FROM locustio/locust
-RUN pip3 install randomuser
+#RUN pip3 install randomuser
 COPY userTraffic.py /mnt/locust/userTraffic.py
+COPY users.json /mnt/locust/users.json
 WORKDIR /mnt/locust
