made task scripts separate from user_traffic.py, updated signing out

--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     ports:
      - "8089:8089"
     command: >
-      -f /mnt/locust/userTraffic.py
+      -f /mnt/locust/user_traffic.py
       --host=http://host.docker.internal:8080
 
 volumes:
