added pulling users from db and relevant changes to compose and dockerfile, removed users.json

--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -71,6 +71,13 @@ services:
     build:
       context: ./locust
       dockerfile: Dockerfile
+    depends_on:
+      - postgres-db
+    environment:
+      POSTGRES_HOST: postgres-db
+      POSTGRES_DB: dev_postgres_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
      - "8089:8089"
     command: >
