--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -66,6 +66,24 @@ services:
     depends_on:
       - prometheus
 
+  # Locust service
+  locust:
+    build:
+      context: ./locust
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres-db
+    environment:
+      POSTGRES_HOST: postgres-db
+      POSTGRES_DB: dev_postgres_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+     - "8089:8089"
+    command: >
+      -f /mnt/locust/user_traffic.py
+      --host=http://host.docker.internal:8080
+
 volumes:
   postgres_data:
   mongo_data:
