MER-153 poczatek prac nad testami jednostkowymi na backendzie

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # MongoDB Configuration
-spring.data.mongodb.database=dev_mongo_db
+#spring.data.mongodb.database=dev_mongo_db
 
 # Enable detailed logging for MongoDB operations
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
