MER-153 przykładowe testy endpointa testowego

--- a/vulcanus/src/test/resources/application-test.properties
+++ b/vulcanus/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+#spring.profiles.active=test
+
 # MongoDB configuration
 #spring.data.mongodb.uri=mongodb://localhost:27018/testdb
 
@@ -12,6 +14,7 @@ logging.level.org.springframework=WARN
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
+#TODO: na pewno to standardd potrzbne? moze nowasza wersja mngo embeded?
 spring.data.mongodb.uri=mongodb://localhost:27018/testdb?uuidRepresentation=STANDARD
 de.flapdoodle.mongodb.embedded.version=4.4.9
 
