--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Common Properties
 spring.profiles.default=dev
 spring.application.name=vulcanus
-
+email.sending.enabled=true
 # PostgreSQL Configuration
 spring.datasource.username=user
 spring.datasource.password=password
