--- a/vulcanus/src/test/resources/application-test.properties
+++ b/vulcanus/src/test/resources/application-test.properties
@@ -2,6 +2,7 @@
 
 # MongoDB configuration
 #spring.data.mongodb.uri=mongodb://localhost:27018/testdb
+email.sending.enabled=false
 
 # H2 database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
