--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 # Common Properties
 spring.profiles.default=dev
 spring.application.name=vulcanus
-
+email.sending.enabled=true
 # PostgreSQL Configuration
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# MongoDB Configuration
-spring.data.mongodb.database=dev_mongo_db
+
 
 # Enable detailed logging for MongoDB operations
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
