--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -2,7 +2,8 @@ name: Java CI
 
 on:
   push:
-    branches: [ master, develop ]
+    branches:
+      - '**'
   pull_request:
     branches: [ master, develop ]
   merge_group:
