--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - '**'
+  pull_request:
+    branches: [ master, develop ]
+  merge_group:
+    branches: [ master, develop ]
 
 jobs:
   test:
@@ -18,7 +22,9 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
+        working-directory: Merkury/venus
         run: npm install
 
       - name: Run tests
+        working-directory: Merkury/venus
         run: npm test -- --watchAll=false
