--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -26,4 +26,5 @@ jobs:
         run: npm install
 
       - name: Run tests
+        working-directory: venus
         run: npm test -- --watchAll=false
