--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Run tests
         working-directory: venus
-        run: npm test -- --watchAll=false
+        run: npm test
