--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '22'
 
       - name: Install dependencies
         working-directory: venus
@@ -31,4 +31,4 @@ jobs:
 
       - name: Run E2E tests
         working-directory: venus
-        run: npm cypress:run
+        run: npm run cypress:run
