--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -25,14 +25,12 @@ jobs:
         working-directory: venus
         run: npm install
 
-      - name: Start application server
-        run: npm run dev
-        working-directory: venus
-
       - name: Run tests
         working-directory: venus
         run: npm test
 
       - name: Run E2E tests
-        working-directory: venus
-        run: npm run cypress:run
+        uses: cypress-io/github-action@v4
+        with:
+          command: npx cypress run
+          browser: chrome
