--- a/venus/package.json
+++ b/venus/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.3",
     "leaflet": "^1.9.4",
+    "openmeteo": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
