--- a/vulcanus/src/test/resources/application-test.properties
+++ b/vulcanus/src/test/resources/application-test.properties
@@ -8,7 +8,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # MongoDB configuration
 spring.data.mongodb.uri=mongodb://localhost:27018/testdb?uuidRepresentation=STANDARD
-de.flapdoodle.mongodb.embedded.version=4.4.9
+# version of mongodb to use (without specifying it, embedded mongoDb from 'flapdoodle' does not work)
+# https://www.mongodb.com/docs/manual/release-notes/
+de.flapdoodle.mongodb.embedded.version=8.0.3
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
