--- a/venus/package.json
+++ b/venus/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.51.23",
+    "antd": "^5.23.4",
     "axios": "^1.7.3",
     "leaflet": "^1.9.4",
     "openmeteo": "^1.1.4",
