--- a/venus/package.json
+++ b/venus/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.51.23",
+    "antd": "^5.23.4",
     "axios": "^1.7.3",
+    "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
     "openmeteo": "^1.1.4",
     "react": "^18.3.1",
