MER-192 enhanced jwt properties

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -32,6 +32,13 @@ url.oauth2-default-success-url=http://localhost:8080/account/login-success
 url.oauth2-failure-url=http://localhost:5173/error?error=oauth2-login-failure
 url.logout-url=http://localhost:5173/
 url.reset-password-url=http://localhost:5173/new-password?token=
+#jwt
+# 7 days in seconds
+jwt.token-cookie-expiration=604800
+jwt.token-name=JWT_token
+# 7 days in milliseconds
+jwt.token-expiration=604800000
+jwt.one-day-in-ms=86400000
 #github
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
