--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -24,6 +24,8 @@ management.endpoint.prometheus.enabled=true
 
 #logging
 logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.cache=TRACE
+logging.level.org.springframework.data.redis=TRACE
 #urls
 url.github-email-endpoint=https://api.github.com/user/emails
 url.after-login-page-url=http://localhost:5173/
