--- a/vulcanus/src/test/resources/application-test.properties
+++ b/vulcanus/src/test/resources/application-test.properties
@@ -17,3 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 logging.level.org.springframework=WARN
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#sa nadpisywane w tescie
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
