--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -21,6 +21,13 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Cache Primes
+        id: cache-react
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: react-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         working-directory: venus
         run: npm install
