--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -3,7 +3,7 @@ name: React CI
 on:
   push:
     branches:
-      - 'MER-*'
+      - 'feature/**'
   pull_request:
     branches: [ master, develop ]
   merge_group:
