start only when venus code change

--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'feature/**'
+    paths:
+      - 'venus/**'
   pull_request:
     branches: [ master, develop ]
   merge_group:
