start only when vulcanus code change

--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -3,7 +3,9 @@ name: Java CI
 on:
   push:
     branches:
-      - '**'
+      - 'feature/**'
+    paths:
+      - 'vulcanus/**'
   pull_request:
     branches: [ master, develop ]
   merge_group:
