--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -27,10 +27,11 @@ jobs:
         id: cache-react
         uses: actions/cache@v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: react-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
+        if: steps.cache-react.outputs.cache-hit != 'true
         working-directory: venus
         run: npm install
 
