--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -31,7 +31,7 @@ jobs:
           key: react-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-        if: steps.cache-react.outputs.cache-hit != 'true
+        if: steps.cache-react.outputs.cache-hit != 'true'
         working-directory: venus
         run: npm install
 
