--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -7,7 +7,13 @@ on:
     paths:
       - 'venus/**'
   pull_request:
-    branches: [ master, develop ]
+    types:
+      - opened
+      - synchronize
+      - reopened
+    branches:
+      - master
+      - develop
   merge_group:
     branches: [ master, develop ]
 
