refactor docker-compose and dockerfile for prometheus

--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - redis
 
   prometheus:
+    container_name: prometheus
     build:
       context: ./prometheus
       dockerfile: Dockerfile
