MER-201 Repaired partially VCS tracking and moved logging to external .properties file

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -1,20 +1,12 @@
 # Common Properties
-spring.profiles.default=dev
+spring.profiles.default=dev,logging
 spring.application.name=vulcanus
 email.sending.enabled=true
 # PostgreSQL Configuration
 spring.datasource.username=user
 spring.datasource.password=password
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-
-
-# Enable detailed logging for MongoDB operations
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-logging.level.org.springframework.data.mongodb.core.convert.MappingMongoConverter=DEBUG
-logging.level.org.springframework.data.mongodb.core.MongoOperations=DEBUG
-logging.level.org.mongodb.driver=DEBUG
 # Spring Actuator and Micrometer Configuration
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.health.show-details=always
@@ -22,10 +14,6 @@ management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=vulcanus
 management.endpoint.prometheus.enabled=true
 
-#logging
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.cache=TRACE
-logging.level.org.springframework.data.redis=TRACE
 #urls
 url.github-email-endpoint=https://api.github.com/user/emails
 url.after-login-page-url=http://localhost:5173/
