feature/MER-250 Enhance chat functionalities with detailed chat view and state management

--- a/vulcanus/src/main/resources/application-dev.properties
+++ b/vulcanus/src/main/resources/application-dev.properties
@@ -5,3 +5,6 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/dev_postgres_db
 # MongoDB Configuration
 spring.data.mongodb.uri=mongodb://user:password@localhost:27017/dev_mongo_db
+
+# Optional Configuration for Chat Functionalities
+spring.config.import=optional:file:./chat.yml
