feat: add formatting check to CI and update package.json scripts

--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Check code formatting
         run: npm run format:check
+        working-directory: venus
 
       - name: Run tests
         working-directory: venus
