feature: integrate Tenor GIF provider with search functionality

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -52,3 +52,6 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 #azure
 azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
+#tenor
+gif-provider.api-key=${MERKURY_GIF_PROVIDER_API_KEY}
+gif-provider.url=https://tenor.googleapis.com/v2
