one test is still failing

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -52,3 +52,9 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 #azure
 azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
+
+
+spring.cache.type=redis
+logging.level.org.springframework.cache=TRACE
+logging.level.org.springframework.aop=TRACE
+
