Add path to pull_request

--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -11,7 +11,7 @@ on:
       - master
       - develop
     paths-ignore:
-      - 'documentation/**'
+      - 'book/**'
   merge_group:
     branches: [ master, develop ]
 
