Add SpotWeatherService and CurrentWeatherSchema for basic spot weather data retrieval

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -59,4 +59,4 @@ gif-provider.url=https://tenor.googleapis.com/v2
 locationq-provider.api-key=${MERKURY_LOCATIONQ_PROVIDER_API_KEY}
 locationq-provider.url=https://us1.locationiq.com/v1
 #spot-weather
-spot-weather.url=https://api.open-meteo.com/v1/forecast"
+spot-weather.url=https://api.open-meteo.com/v1/forecast
