Add TimeZoneService and related properties for improved time zone handling in weather data

--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -60,3 +60,5 @@ locationq-provider.api-key=${MERKURY_LOCATIONQ_PROVIDER_API_KEY}
 locationq-provider.url=https://us1.locationiq.com/v1
 #spot-weather
 spot-weather.url=https://api.open-meteo.com/v1/forecast
+#time-zone-coordinates
+coordinates-time-zone.url=https://api.wheretheiss.at/v1/coordinates
