MER-286 - pr fixes 2

--- a/vulcanus/pom.xml
+++ b/vulcanus/pom.xml
@@ -219,6 +219,11 @@
             <version>12.30.0</version>
         </dependency>
         <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-blob-batch</artifactId>
+            <version>12.28.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.20.1</version>
